# Crypto-Trading-AI

./: .env.example  .gitignore  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  COMPLETION_SUMMARY.md  Dockerfile  FILE_RENAMING.md  README.md  TRAIN_MODELS_FIX.md  all_timeframes_benchmark.py  analysis_notebook.py  analyze_signals.py  apply_fixes.py  automation_config.json  automation_config_ml.json  automation_config_template.json  automation_scheduler.py  baseline_benchmark.py  benchmark_cuda.py  check_config.py  check_cuda.py  check_database.py  check_db_tables.py  check_gpu_support.py  check_predictions.py  collect_data.py  collect_sentiment.py  complete_end_to_end_assessment.py  complete_model_assessment.py  comprehensive_ml_collector.py  config_v2.py  control_center.py  crypto_control_center.py  crypto_data_collector.py  dashboard.py  database_schema_fix.py  debug_agent.py  diagnose_agent_issues.py  diagnose_features.py  diagnose_predictions.py  (+66 more)
.venv311/: pyvenv.cfg
analysis/: profitability_analysis.py
benchmarks/: all_timeframes_benchmark.py  baseline_benchmark.py  complete_end_to_end_assessment.py  complete_model_assessment.py  direction_benchmark.py  enhanced_ml_benchmark.py  ensemble_direction_benchmark.py  fair_comparison_benchmark.py  feature_count_comparison.py  honest_benchmark.py
collectors/: collect_sentiment.py  comprehensive_ml_collector_v2.py
config/: baseline_ml_config.json
crypto_agent/: __init__.py  agent.py  config.py  database.py  database.py.backup  prompts.py  tools.py  tools.py.backup  tools_backup.py
crypto_ai/: __init__.py  gpu_utils.py  (+1 more)
(+124 files in other folders)
