[project]
name = "crypto-trading-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "OfriRose",email = "ofri.rozner@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py (==2.3.1)",
    "aiodns (==3.5.0)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.12.14)",
    "aiosignal (==1.4.0)",
    "anyio (==4.9.0)",
    "argon2-cffi (==25.1.0)",
    "argon2-cffi-bindings (==21.2.0)",
    "arrow (==1.3.0)",
    "asttokens (==3.0.0)",
    "astunparse (==1.6.3)",
    "async-lru (==2.0.5)",
    "attrs (==25.3.0)",
    "babel (==2.17.0)",
    "beautifulsoup4 (==4.13.4)",
    "bleach (==6.2.0)",
    "catboost (==1.2.8)",
    "ccxt (==4.4.94)",
    "certifi (==2025.7.9)",
    "cffi (==1.17.1)",
    "requests (>=2.32.5,<3.0.0)",
    "charset-normalizer (==3.4.2)",
    "colorama (==0.4.6)",
    "comm (==0.2.2)",
    "contourpy (==1.3.2)",
    "cryptography (==45.0.5)",
    "cycler (==0.12.1)",
    "debugpy (==1.8.14)",
    "decorator (==5.2.1)",
    "defusedxml (==0.7.1)",
    "dnspython (==2.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
